debigage project Page

--- a/css/ProjectPage/styleProject.css
+++ b/css/ProjectPage/styleProject.css
@@ -170,7 +170,7 @@ transition: all 1s ease;
   font-weight: 500;
   
 }
-.svpPlus_show_1, .svpPlus_hide_1, .svpPlus_show_2, .svpPlus_hide_2{
+.svpPlus_show_1, .svpPlus_hide_1, .svpPlus_show_2, .svpPlus_hide_2, .svpPlus_show_3, .svpPlus_hide_3{
   margin-left: 0px;
   margin-right: 20px;
   margin-top: -5px;
