--- a/css/Formation/styleFormation.css
+++ b/css/Formation/styleFormation.css
@@ -201,7 +201,7 @@ color: #555ac0;
   0 18px 36px -18px rgba(0, 0, 0, 0.3),
   0 -12px 36px -8px rgba(0, 0, 0, 0.025);
   background: #fff;
-  width: calc(80vw - 100px);
+  width: calc(100vw - 50px);
   border-radius: 0 6px 6px 0;
 }
 
@@ -327,7 +327,7 @@ color: #555ac0;
   }
 }
 
-.filiere,.diplome,.mention{
+.filiere,.filiere-com,.diplome,.mention{
   /* margin: 15px; */
   font-size: 20px;
   color: #040005c7;
@@ -335,8 +335,13 @@ color: #555ac0;
   font-weight:bold;
   margin-top: 10px;
   margin-left: 15px;
+  
  
 } 
+.filiere-com{
+
+  margin-left: 52px;
+}
 .diplome{
   margin-top: -10px;
 }
@@ -345,4 +350,45 @@ color: #555ac0;
 }
 .lieu{
   margin-top: 40px;
+}
+@media only screen and (max-width: 768px) {
+
+  h1{
+    margin-top: 80px;
+    margin-bottom: -10px;
+    font-size: 22px;
+  }
+.timeline__event--type1, .timeline__event--type2,.timeline__event--type3{
+  width: 120%;
+  border-radius: 6px;
+  font-size: 1rem;
+} 
+.timeline__event__title{
+  
+  margin: -5px;
+}
+.timeline__event__content{
+  width: 150%;
+  border-radius: 6px;
+
+}
+.timeline__event__date{
+  width: 104%;
+  margin-left: -7px;
+  border-radius: 6px 0px 0px 6px;
+  text-align: center;
+}
+.timeline__event__icon {
+    display: none;
+}
+span svg, span img{
+  display: none;
+}
+.diplome{
+  width: 73%;
+}
+
+.filiere-com{
+  margin-left: 15px;
+}
 }
