--- a/css/Formation/styleFormation.css
+++ b/css/Formation/styleFormation.css
@@ -355,40 +355,53 @@ color: #555ac0;
 
   h1{
     margin-top: 80px;
-    margin-bottom: -10px;
+    margin-bottom: 25px;
     font-size: 22px;
   }
-.timeline__event--type1, .timeline__event--type2,.timeline__event--type3{
-  width: 120%;
-  border-radius: 6px;
-  font-size: 1rem;
-} 
-.timeline__event__title{
+  .timeline{
+    margin: 10px;
+    width: 100%;
+  }
+  .timeline__event--type1, .timeline__event--type2,.timeline__event--type3{
+    /* width: 120%; */
+    border-radius: 6px;
+    font-size: 1rem;
+    margin-left: -20px;
+    
+  } 
+  .timeline__event__title span{
+    font-size: 20px;
+    margin-left: -10px;
+  }
+  .timeline__event__title svg{
+    margin-left: -1px;
+  }
+ .timeline__event__description{
+    margin-left: -15px;
+    padding-left: 2px;
+    margin-right: -10px;
+    width: 100%;
+
+  }
+
+  .timeline__event__date{
+    width: 124%;
+    margin-left: -30px;
+    border-radius: 6px 0px 0px 6px;
+    text-align: center;
+  }
+  .timeline__event__icon {
+      display: none;
+  }
   
-  margin: -5px;
-}
-.timeline__event__content{
-  width: 150%;
-  border-radius: 6px;
+  .diplome, .filiere, .mention{
+    width: 100%;
+    font-size: 18px;
+  }
 
-}
-.timeline__event__date{
-  width: 104%;
-  margin-left: -7px;
-  border-radius: 6px 0px 0px 6px;
-  text-align: center;
-}
-.timeline__event__icon {
-    display: none;
-}
-span svg, span img{
-  display: none;
-}
-.diplome{
-  width: 73%;
-}
-
-.filiere-com{
-  margin-left: 15px;
-}
+  .filiere-com{
+    margin-left: 15px;
+    font-size: 18px;
+    margin-top: -3px;
+  }
 }
