--- a/css/Skill/styleSkill.css
+++ b/css/Skill/styleSkill.css
@@ -441,7 +441,7 @@
   margin: 20px;
   padding: 20px;
   border-radius: 10px;
-  
+  background-color: #efecef;
   font-weight: bold;
   -webkit-transition: all 1s ease; /* Safari et Chrome */
   -moz-transition: all 1s ease; /* Firefox */
@@ -462,14 +462,15 @@
 .contact11 img{
   margin-right: 30px;
   
-  margin-top: auto;
-  margin-bottom: auto;
+  margin-top: 55px;
+  margin-bottom: 10px;
 }
 
 .contact12{
   display: flex;
   flex-direction: column;
   justify-content: start;
+  margin-top: 30px;
 }
 .contactDiv {
   display: flex;
@@ -477,22 +478,48 @@
   justify-content: start;
   border-left: #000000 solid 0.5px;
   padding-left: 20px;
+  margin-top: 10px;
 }
 .contactDiv span{
   margin: 10px;
+}
+
+
+.mail-to {
+  padding: 0;
+  height: 20px;
+}
+.mail-to a:hover, .contactDiv a:hover{
+  cursor: pointer;
+  text-decoration: underline;
+  opacity: 0.6;
+}
+.mail-logo{
+  margin: -20px 90px 10px 40px;
+  /* width: 25%; */
 }
 .image-logo{
    
     display: block;
     margin: 80px 0 0px 0;
-    width: 220px;
+    width: 240px;
     height: 250px;
     border-radius: 50%;
+    
     -webkit-transition: all 1s ease; /* Safari et Chrome */
     -moz-transition: all 1s ease; /* Firefox */
     -ms-transition: all 1s ease; /* Internet Explorer 9 */
     -o-transition: all 1s ease; /* Opera */
     transition: all 1s ease;
+  }
+  .a-photo{
+    display: block;
+    margin: 80px 0 0px 0;
+    width: 240px;
+    height: 250px;
+    border-radius: 50%;
+    width: 65%;
+    margin: auto;
   }
 .image-logo:hover{
   -webkit-transform:scale(1.1); /* Safari et Chrome */
@@ -503,7 +530,7 @@
 }
  
 @media only screen and (max-width: 768px) {
-  h1{
+  h1,  .content h1{
     margin-top: 80px;
     margin-bottom: 45px;
     font-size: 22px;
@@ -524,5 +551,63 @@
   #Skill-SQL{
     padding-left: -20px;
   }
+
+  .contact1{
+  
+    flex-direction: column;
+    margin: auto;
+  }
+  .contact10{
+    flex-direction: column;
+    justify-content: start;
+    margin: 0px;
+    /* margin: 30px; */
+  }
+  .contact11 {
+     display: flex;
+    flex-direction: column;
+    width: 110%;
+    margin-left: -15px;
+    align-items: center;
+    background-color: #efecef;
+    box-shadow: 1px 20px 25px -5px rgba(68, 2, 68, 0.1),
+  1px 10px 10px -5px rgba(0, 0, 0, 0.04);
+  
+  }
+  .contact11 .contactDiv a{
+    border-radius: 0;
+    margin-left: 0px;
+    width: 110%;
+    height: auto;
+    padding-top: 0;
+  }
+  .contactDiv span{
+    height: auto;
+  }
+  .contact11 img{
+    margin: 25px 0 10px 0;
+   
+  }
+  
+  .contact12{
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+  }
+  .contactDiv {
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    padding-left: 0px;
+    margin-left: -5px;
+    
+  }
+
+  .image-logo{
+     
+      display: block;
+      margin: auto;
+    }
+
 
 }
