--- a/css/Formation/styleFormation.css
+++ b/css/Formation/styleFormation.css
@@ -351,6 +351,26 @@ color: #555ac0;
 .lieu{
   margin-top: 40px;
 }
+.contact-link{
+  position: absolute;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: -25px;
+  bottom: 0px;
+  right: 10px;
+  z-index: 4;
+  transition: all 1s ease-out;
+  transition: all 3s ;
+}
+.contact-link span{
+  margin: 10px;
+  cursor: pointer;
+}
+.contact-link span:hover{
+  transform:scale(1.3);transition: 1s ;
+}
 @media only screen and (max-width: 768px) {
 
   h1{
